--- a/UltraVncAx/UltraVncAx.vcxproj
+++ b/UltraVncAx/UltraVncAx.vcxproj
@@ -107,7 +107,7 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
       <WarningLevel>Level3</WarningLevel>
       <MinimalRebuild>true</MinimalRebuild>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\omnithread;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\vncviewer\omnithread;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_DEBUG;WIN32;_WINDOWS;_USRDLL;_ULTRAVNCAX_;__NT__;_WINSTATIC;__WIN32__;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>..\OutputFiles\IntermediaryFiles\Debug\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>..\OutputFiles\IntermediaryFiles\Debug\UltraVncAx.pch</PrecompiledHeaderOutputFile>
@@ -146,56 +146,56 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\AboutBox.cpp" />
-    <ClCompile Include="..\AccelKeys.cpp" />
-    <ClCompile Include="..\AuthDialog.cpp" />
-    <ClCompile Include="..\buildtime.cpp" />
-    <ClCompile Include="..\ClientConnection.cpp" />
-    <ClCompile Include="..\ClientConnectionCacheRect.cpp" />
-    <ClCompile Include="..\ClientConnectionClipboard.cpp" />
-    <ClCompile Include="..\ClientConnectionCopyRect.cpp" />
-    <ClCompile Include="..\ClientConnectionCoRRE.cpp" />
-    <ClCompile Include="..\ClientConnectionCursor.cpp" />
-    <ClCompile Include="..\ClientConnectionFile.cpp" />
-    <ClCompile Include="..\ClientConnectionFullScreen.cpp" />
-    <ClCompile Include="..\ClientConnectionHextile.cpp" />
-    <ClCompile Include="..\ClientConnectionRaw.cpp" />
-    <ClCompile Include="..\ClientConnectionRRE.cpp" />
-    <ClCompile Include="..\ClientConnectionTight.cpp" />
-    <ClCompile Include="..\ClientConnectionUltra.cpp" />
-    <ClCompile Include="..\ClientConnectionZlib.cpp" />
-    <ClCompile Include="..\ClientConnectionZlibHex.cpp" />
-    <ClCompile Include="..\d3des.c" />
-    <ClCompile Include="..\Daemon.cpp" />
+    <ClCompile Include="..\vncviewer\AboutBox.cpp" />
+    <ClCompile Include="..\vncviewer\AccelKeys.cpp" />
+    <ClCompile Include="..\vncviewer\AuthDialog.cpp" />
+    <ClCompile Include="..\vncviewer\buildtime.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnection.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionCacheRect.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionClipboard.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionCopyRect.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionCoRRE.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionCursor.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionFile.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionFullScreen.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionHextile.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionRaw.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionRRE.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionTight.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionUltra.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionZlib.cpp" />
+    <ClCompile Include="..\vncviewer\ClientConnectionZlibHex.cpp" />
+    <ClCompile Include="..\vncviewer\d3des.c" />
+    <ClCompile Include="..\vncviewer\Daemon.cpp" />
     <ClCompile Include="..\rfb\dh.cpp" />
     <ClCompile Include="..\DSMPlugin\DSMPlugin.cpp" />
-    <ClCompile Include="..\Exception.cpp" />
-    <ClCompile Include="..\FileTransfer.cpp" />
-    <ClCompile Include="..\Flasher.cpp" />
-    <ClCompile Include="..\FullScreenTitleBar.cpp" />
+    <ClCompile Include="..\vncviewer\Exception.cpp" />
+    <ClCompile Include="..\vncviewer\FileTransfer.cpp" />
+    <ClCompile Include="..\vncviewer\Flasher.cpp" />
+    <ClCompile Include="..\vncviewer\FullScreenTitleBar.cpp" />
     <ClCompile Include="Helpers.cpp" />
-    <ClCompile Include="..\KeyMap.cpp" />
-    <ClCompile Include="..\Log.cpp" />
-    <ClCompile Include="..\LowLevelHook.cpp" />
+    <ClCompile Include="..\vncviewer\KeyMap.cpp" />
+    <ClCompile Include="..\vncviewer\Log.cpp" />
+    <ClCompile Include="..\vncviewer\LowLevelHook.cpp" />
     <ClCompile Include="..\lzo\minilzo.c" />
-    <ClCompile Include="..\MRU.cpp" />
-    <ClCompile Include="..\SessionDialog.cpp" />
+    <ClCompile Include="..\vncviewer\MRU.cpp" />
+    <ClCompile Include="..\vncviewer\SessionDialog.cpp" />
     <ClCompile Include="StdAfx.cpp" />
-    <ClCompile Include="..\stdhdrs.cpp">
+    <ClCompile Include="..\vncviewer\stdhdrs.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">stdhdrs.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="..\TextChat.cpp" />
+    <ClCompile Include="..\vncviewer\TextChat.cpp" />
     <ClCompile Include="UltraVncAx.cpp" />
     <ClCompile Include="UltraVncAxGlobalConstructor.cpp" />
     <ClCompile Include="UltraVncAxObj.cpp" />
-    <ClCompile Include="..\vncauth.c" />
-    <ClCompile Include="..\VNCOptions.cpp" />
-    <ClCompile Include="..\vncviewer.cpp" />
-    <ClCompile Include="..\VNCviewerApp.cpp" />
-    <ClCompile Include="..\VNCviewerApp32.cpp" />
+    <ClCompile Include="..\vncviewer\vncauth.c" />
+    <ClCompile Include="..\vncviewer\VNCOptions.cpp" />
+    <ClCompile Include="..\vncviewer\vncviewer.cpp" />
+    <ClCompile Include="..\vncviewer\VNCviewerApp.cpp" />
+    <ClCompile Include="..\vncviewer\VNCviewerApp32.cpp" />
     <ClCompile Include="..\ZipUnZip32\ZipUnzip32.cpp" />
-    <ClCompile Include="..\zrle.cpp" />
+    <ClCompile Include="..\vncviewer\zrle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="UltraVncAx.def" />
@@ -265,38 +265,38 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\AboutBox.h" />
-    <ClInclude Include="..\AccelKeys.h" />
-    <ClInclude Include="..\AuthDialog.h" />
-    <ClInclude Include="..\ClientConnection.h" />
-    <ClInclude Include="..\d3des.h" />
-    <ClInclude Include="..\Daemon.h" />
+    <ClInclude Include="..\vncviewer\AboutBox.h" />
+    <ClInclude Include="..\vncviewer\AccelKeys.h" />
+    <ClInclude Include="..\vncviewer\AuthDialog.h" />
+    <ClInclude Include="..\vncviewer\ClientConnection.h" />
+    <ClInclude Include="..\vncviewer\d3des.h" />
+    <ClInclude Include="..\vncviewer\Daemon.h" />
     <ClInclude Include="..\rfb\dh.h" />
     <ClInclude Include="..\DSMPlugin\DSMPlugin.h" />
-    <ClInclude Include="..\Exception.h" />
-    <ClInclude Include="..\FileTransfer.h" />
-    <ClInclude Include="..\Flasher.h" />
-    <ClInclude Include="..\FullScreenTitleBar.h" />
-    <ClInclude Include="..\FullScreenTitleBarConst.h" />
-    <ClInclude Include="..\KeyMap.h" />
-    <ClInclude Include="..\keysymdef.h" />
-    <ClInclude Include="..\Log.h" />
-    <ClInclude Include="..\LowLevelHook.h" />
-    <ClInclude Include="..\MRU.h" />
+    <ClInclude Include="..\vncviewer\Exception.h" />
+    <ClInclude Include="..\vncviewer\FileTransfer.h" />
+    <ClInclude Include="..\vncviewer\Flasher.h" />
+    <ClInclude Include="..\vncviewer\FullScreenTitleBar.h" />
+    <ClInclude Include="..\vncviewer\FullScreenTitleBarConst.h" />
+    <ClInclude Include="..\vncviewer\KeyMap.h" />
+    <ClInclude Include="..\vncviewer\keysymdef.h" />
+    <ClInclude Include="..\vncviewer\Log.h" />
+    <ClInclude Include="..\vncviewer\LowLevelHook.h" />
+    <ClInclude Include="..\vncviewer\MRU.h" />
     <ClInclude Include="..\res\resource.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="..\rfb.h" />
-    <ClInclude Include="..\SessionDialog.h" />
+    <ClInclude Include="..\vncviewer\rfb.h" />
+    <ClInclude Include="..\vncviewer\SessionDialog.h" />
     <ClInclude Include="StdAfx.h" />
-    <ClInclude Include="..\stdhdrs.h" />
-    <ClInclude Include="..\TextChat.h" />
+    <ClInclude Include="..\vncviewer\stdhdrs.h" />
+    <ClInclude Include="..\vncviewer\TextChat.h" />
     <ClInclude Include="UltraVncAxCP.h" />
     <ClInclude Include="UltraVncAxObj.h" />
-    <ClInclude Include="..\vncauth.h" />
-    <ClInclude Include="..\VNCOptions.h" />
-    <ClInclude Include="..\vncviewer.h" />
-    <ClInclude Include="..\VNCviewerApp.h" />
-    <ClInclude Include="..\VNCviewerApp32.h" />
+    <ClInclude Include="..\vncviewer\vncauth.h" />
+    <ClInclude Include="..\vncviewer\VNCOptions.h" />
+    <ClInclude Include="..\vncviewer\vncviewer.h" />
+    <ClInclude Include="..\vncviewer\VNCviewerApp.h" />
+    <ClInclude Include="..\vncviewer\VNCviewerApp32.h" />
     <ClInclude Include="..\ZipUnZip32\ZipUnZip32.h" />
   </ItemGroup>
   <ItemGroup>
