--- a/UltraVncAx/UltraVncAx.rc
+++ b/UltraVncAx/UltraVncAx.rc
@@ -57,42 +57,42 @@ END
 // Version
 //
 
-VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,1,0,2
- PRODUCTVERSION 1,1,0,2
- FILEFLAGSMASK 0x3fL
-#ifdef _DEBUG
- FILEFLAGS 0x1L
-#else
- FILEFLAGS 0x0L
-#endif
- FILEOS 0x4L
- FILETYPE 0x2L
- FILESUBTYPE 0x0L
-BEGIN
-    BLOCK "StringFileInfo"
-    BEGIN
-        BLOCK "040904B0"
-        BEGIN
-            VALUE "Comments", "UltraVNC Viewer ActiveX Object\0"
-            VALUE "CompanyName", "UltraVNC - VPC Technologies\0"
-            VALUE "FileDescription", "VNCViewer\0"
-            VALUE "FileVersion", "1.1.0.2\0"
-            VALUE "InternalName", "VNCViewerAx\0"
-            VALUE "LegalCopyright", "Copyright © 2002-2006 UltraVNC team members (VPC Technologies for ActiveX conversion)\0"
-            VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "UltraVncAx.DLL\0"
-            VALUE "ProductName", "UltraVNC VNCViewer ActiveX Object\0"
-            VALUE "ProductVersion", "1.1.0.2\0"
-            VALUE "SpecialBuild", "1.0.2\0"
-            VALUE "OLESelfRegister", "\0"
-        END
-    END
-    BLOCK "VarFileInfo"
-    BEGIN
-        VALUE "Translation", 0x409, 1200
-    END
-END
+//VS_VERSION_INFO VERSIONINFO
+// FILEVERSION 1,1,0,2
+// PRODUCTVERSION 1,1,0,2
+// FILEFLAGSMASK 0x3fL
+//#ifdef _DEBUG
+// FILEFLAGS 0x1L
+//#else
+// FILEFLAGS 0x0L
+//#endif
+// FILEOS 0x4L
+// FILETYPE 0x2L
+// FILESUBTYPE 0x0L
+//BEGIN
+//    BLOCK "StringFileInfo"
+//    BEGIN
+//        BLOCK "040904B0"
+//        BEGIN
+//            VALUE "Comments", "UltraVNC Viewer ActiveX Object\0"
+//            VALUE "CompanyName", "UltraVNC - VPC Technologies\0"
+//            VALUE "FileDescription", "VNCViewer\0"
+//            VALUE "FileVersion", "1.1.0.2\0"
+//            VALUE "InternalName", "VNCViewerAx\0"
+//            VALUE "LegalCopyright", "Copyright ï¿½ 2002-2006 UltraVNC team members (VPC Technologies for ActiveX conversion)\0"
+//            VALUE "LegalTrademarks", "\0"
+//            VALUE "OriginalFilename", "UltraVncAx.DLL\0"
+//            VALUE "ProductName", "UltraVNC VNCViewer ActiveX Object\0"
+//            VALUE "ProductVersion", "1.1.0.2\0"
+//            VALUE "SpecialBuild", "1.0.2\0"
+//            VALUE "OLESelfRegister", "\0"
+//        END
+//    END
+//    BLOCK "VarFileInfo"
+//    BEGIN
+//        VALUE "Translation", 0x409, 1200
+//    END
+//END
 
 #endif    // !_MAC
 
