--- a/UltraVncAx/UltraVncAx.vcxproj
+++ b/UltraVncAx/UltraVncAx.vcxproj
@@ -134,7 +134,7 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
       <SubSystem>Windows</SubSystem>
       <OutputFile>..\OutputFiles\Executables\Debug\UltraVncAx.dll</OutputFile>
       <ImportLibrary>.\Debug\UltraVncAx.lib</ImportLibrary>
-      <AdditionalDependencies>libjpeg-turbo-win.lib;comctl32.lib;winmm.lib;odbc32.lib;odbccp32.lib;wsock32.lib;omnithread.lib;zlib1d.lib;rdr.lib;zip32.lib;unz32lib.lib;libzstd_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>zip32.lib;unz32lib.lib;libzstd_static.lib;libjpeg-turbo-win.lib;comctl32.lib;winmm.lib;odbc32.lib;odbccp32.lib;wsock32.lib;omnithread.lib;zlib1d.lib;rdr.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\UltraVncAx.def</ModuleDefinitionFile>
       <AdditionalLibraryDirectories>..\vncviewer\Debug;..\vncviewer\bin\Win32_Debug;..\zlib\lib\Win32;..\OutputFiles\Executables\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
@@ -146,6 +146,19 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CICompile Include="..\common\win32_helpers.cpp" />
+    <CICompile Include="..\common\Clipboard.cpp" />
+    <CICompile Include="..\common\UltraVncZ.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\vncviewer\directx\directxviewer.cpp" />  
+    <ClCompile Include="..\vncviewer\display.cpp" />  
+    <ClCompile Include="..\vncviewer\vnctouch.cpp" />  
+    <ClCompile Include="..\vncviewer\Snapshot.cpp" /> 
+    <ClCompile Include="..\vncviewer\MessBox2.cpp" />  
+    <ClCompile Include="..\vncviewer\ClientConnectionUltra2.cpp" />  
+    <ClCompile Include="..\vncviewer\sessiondialogLoadSave.cpp" />    
+    <ClCompile Include="..\vncviewer\SessionDialogTabs.cpp" />   
     <ClCompile Include="..\vncviewer\AboutBox.cpp" />
     <ClCompile Include="..\vncviewer\AccelKeys.cpp" />
     <ClCompile Include="..\vncviewer\AuthDialog.cpp" />
@@ -175,6 +188,7 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
     <ClCompile Include="..\vncviewer\FullScreenTitleBar.cpp" />
     <ClCompile Include="Helpers.cpp" />
     <ClCompile Include="..\vncviewer\KeyMap.cpp" />
+    <ClCompile Include="..\vncviewer\KeyMapJap.cpp" />
     <ClCompile Include="..\vncviewer\Log.cpp" />
     <ClCompile Include="..\vncviewer\LowLevelHook.cpp" />
     <ClCompile Include="..\lzo\minilzo.c" />
@@ -265,6 +279,9 @@ echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg" </Command>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\common\win32_helpers.cpp" />
+    <ClInclude Include="..\common\Clipboard.cpp" />
+    <ClInclude Include="..\common\UltraVncZ.cpp" />
     <ClInclude Include="..\vncviewer\AboutBox.h" />
     <ClInclude Include="..\vncviewer\AccelKeys.h" />
     <ClInclude Include="..\vncviewer\AuthDialog.h" />
