--- a/zipunzip_src/zip20/windll/visualc/lib/zip32v12.vcxproj
+++ b/zipunzip_src/zip20/windll/visualc/lib/zip32v12.vcxproj
@@ -1603,6 +1603,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Vista|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='RelIPv6|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="..\..\windll.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\ziplib.def" />
