--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,12 @@ libjpeg-turbo-win/DebugLib-Static/
 *.idb
 addon/ms-logon/logging/x64/
 *.suo
+
+**/cmake_install.cmake
+**/CMakeCache.txt
+UltraVncAx.sln
+**/UltraVncAx.vcxproj*
+**/ZERO_CHECK*
+**/ALL_BUILD*
+CMakeFiles
+.vs
