--- a/UltraVncAx/CMakeLists.txt
+++ b/UltraVncAx/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.15)
 
 project(
     UltraVncAx C CXX
@@ -7,8 +7,8 @@ project(
 add_definitions("-DWIN32 -D_WINDOWS -D_USRDLL -D__NT__ -D__WIN32__")
 add_definitions("-D_AFXDLL -D_WINDLL")
 add_definitions("-D_WINSTATIC -D_ULTRAVNCAX_ -D_VIEWER")
-add_definitions("/Oi /GL /Gy /Z7")
-set(CMAKE_SHARED_LINKER_FLAGS "/OPT:REF /OPT:ICF /MACHINE:X86 /SUBSYSTEM:WINDOWS /LTCG")
+
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 set(TARGET_NAME UltraVncAx)
 
