--- a/UltraVncAx/CMakeLists.txt
+++ b/UltraVncAx/CMakeLists.txt
@@ -14,6 +14,35 @@ set(TARGET_NAME UltraVncAx)
 
 add_library(${TARGET_NAME} SHARED "")
 
+set(RESOURCES
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\B46.ico
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\back.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\both.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\closeup.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\cursor1.cur
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\cursorsel.cur
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\dir.ico
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\drive.ico
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\file.ico
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\flash.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\front.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\hoch.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\idr_tray.ico
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\mainicon.ico
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\maximizeup.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\minimizeup.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\nocursor.cur
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\none.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\pindown.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\stat\\pinup.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\quer.bmp
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\vnc32.BMP
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\vnc64.BMP
+  ${CMAKE_SOURCE_DIR}\\vncviewer\\res\\vncviewer.ico
+)
+source_group("Resource Files" FILES ${RESOURCES})
+set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} /l 0x0410 /i ${CMAKE_SOURCE_DIR}\\vncviewer\\res")
+
 target_sources(${TARGET_NAME}
   PRIVATE
     ${CMAKE_SOURCE_DIR}\\common\\Clipboard.cpp
@@ -62,7 +91,6 @@ target_sources(${TARGET_NAME}
     ${CMAKE_SOURCE_DIR}\\vncviewer\\MRU.cpp
     ${CMAKE_SOURCE_DIR}\\vncviewer\\SessionDialog.cpp
     StdAfx.cpp
-    #${CMAKE_SOURCE_DIR}\\..\\vncviewer\\stdhdrs.cpp
     ${CMAKE_SOURCE_DIR}\\vncviewer\\TextChat.cpp
     UltraVncAx.cpp
     UltraVncAxGlobalConstructor.cpp
@@ -97,7 +125,6 @@ target_sources(${TARGET_NAME}
     ${CMAKE_SOURCE_DIR}\\vncviewer\\rfb.h
     ${CMAKE_SOURCE_DIR}\\vncviewer\\SessionDialog.h
     StdAfx.h
-    #${CMAKE_SOURCE_DIR}\\vncviewer\\stdhdrs.h
     ${CMAKE_SOURCE_DIR}\\vncviewer\\TextChat.h
     UltraVncAxCP.h
     UltraVncAxObj.h
@@ -107,6 +134,7 @@ target_sources(${TARGET_NAME}
     ${CMAKE_SOURCE_DIR}\\vncviewer\\VNCviewerApp.h
     ${CMAKE_SOURCE_DIR}\\vncviewer\\VNCviewerApp32.h
     ${CMAKE_SOURCE_DIR}\\ZipUnZip32\\ZipUnZip32.h
+    ${RESOURCES}
 )
 
 add_dependencies(${TARGET_NAME} omnithread)
@@ -119,3 +147,4 @@ target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SO
 target_link_libraries(${TARGET_NAME} comctl32 winmm odbc32 odbccp32 wsock32)
 target_link_libraries(${TARGET_NAME} zstd)
 target_link_libraries(${TARGET_NAME} ${CONAN_TARGETS})
+
