ultravnc: generate the interop library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,6 @@ INCLUDE_EXTERNAL_MSPROJECT(unzip ${CMAKE_SOURCE_DIR}\\zipunzip_src\\unzip\\windl
 add_subdirectory(zstd)
 add_subdirectory(UltraVncAx)
 add_subdirectory(UltraVncAxTest)
+
+find_package(IDL REQUIRED)
+add_idl(UltraVncAxInterop "UltraVncAx/UltraVncAx.idl" TLBIMP Interop.UltraVncAx)
